# fair-exchange

./: Insomnia.yaml  README.md
appA/project/resources/: exchange.py
appB/.docker/appB/: docker-compose.yml
appB/.scripts/appB/: up.sh
appB/project/: .env.example
attA/project/resources/: exchange.py
attB/: pyproject.toml
attB/project/: wsgi.py
attestables/a/: pyproject.toml
attestables/a/project/: main.py  response.json
attestables/alice/: .gitignore  README.md  pyproject.toml
attestables/alice/.docker/alice/: docker-compose.yml
attestables/alice/.docker/alice/env/: .env.database.example
attestables/alice/.scripts/alice/: up.sh
attestables/alice/project/: .env.example  __init__.py
attestables/alice/project/migrations/versions/: e9a97e582699_.py
attestables/alice/project/repository/models/: __init__.py
attestables/alice/project/resources/: exchange.py
attestables/bob/: pyproject.toml
avoine/: README.md  pyproject.toml
avoine/project/: guardian_angel.py  main.py  party.py
model-checking/: .gitignore  alice.pml  alice.sh  main.py
molina/: Insomnia.yaml
molina-jimenez/: Insomnia.yaml
molina-jimenez/appA/: README.md
molina-jimenez/appB/: README.md  pyproject.toml
molina-jimenez/appB/project/: config.py
molina-jimenez/attA/: README.md
molina-jimenez/attB/: README.md
molina-jimenez/attB/project/: __init__.py
molina-jimenez/pbb/: README.md
molina-jimenez/pbb/project/: .env.example  __init__.py
molina/appA/: .gitignore
molina/attB/: .gitignore
molina/attB/project/: __init__.py
molina/pbb/: .gitignore  pyproject.toml
oliveira-rodrigues/: README.md  pbb.sol
pbb/: .gitignore  pyproject.toml
pbb/.scripts/pbb/: up.sh
pbb/project/: __init__.py
pbb/project/repository/: exchange.py
rodrigues/: pbb.sol
rodrigues/appA/: pyproject.toml
rodrigues/attA/: pyproject.toml
(+96 files in other folders)
